// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> by default on desktop matches with snapshot 1`] = `
<div
  className="sc-dkPtRN dKFCpL k-Carousel"
>
  <div
    className="k-Carousel__inner"
    onKeyDown={[Function]}
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
    >
      <div
        className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
      >
        <div
          className="k-Carousel__page__item"
        >
          <div
            className="sc-hKwDye gitSxG k-ProjectCard k-ProjectCard--normal"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCImPb bVpLzu k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                The Office, la série culte décortiquée par S!CK
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jRQBWg eMzrbS k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #19b4fa)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-bold k-u-hidden@xs-down k-ProjectCard__progress__text"
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-Carousel__page__item"
        >
          <div
            className="sc-hKwDye gitSxG k-ProjectCard k-ProjectCard--success"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten-1.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCImPb bVpLzu k-Title k-ProjectCard__title k-u-clamp-2 custom className k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                Pellentesque ornare sem lacinia quam venenatis vestibulum.
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jRQBWg eMzrbS k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #19b4fa)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-bold k-u-hidden@xs-down k-ProjectCard__progress__text"
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> by default on mobile matches with snapshot 1`] = `
<div
  className="sc-dkPtRN dKFCpL k-Carousel"
>
  <div
    className="k-Carousel__inner"
    onKeyDown={[Function]}
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="k-Carousel__inner__pageContainer custom-class k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
    >
      <div
        className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
      >
        <div
          className="k-Carousel__page__item"
        >
          <div
            className="sc-hKwDye gitSxG k-ProjectCard k-ProjectCard--normal"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCImPb bVpLzu k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                The Office, la série culte décortiquée par S!CK
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jRQBWg eMzrbS k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #19b4fa)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-bold k-u-hidden@xs-down k-ProjectCard__progress__text"
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-Carousel__page__item"
        >
          <div
            className="sc-hKwDye gitSxG k-ProjectCard k-ProjectCard--success"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten-1.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCImPb bVpLzu k-Title k-ProjectCard__title k-u-clamp-2 custom className k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                Pellentesque ornare sem lacinia quam venenatis vestibulum.
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jRQBWg eMzrbS k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #19b4fa)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-bold k-u-hidden@xs-down k-ProjectCard__progress__text"
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> empty carousel matches with snapshot 1`] = `null`;

exports[`<Carousel /> legacy carousel on desktop matches with snapshot 1`] = `
<div
  className="sc-dkPtRN eghNle k-Carousel k-LegacyCarousel"
>
  <div
    className="sc-gsDKAQ hebEnC k-Grid"
  >
    <div
      className="k-Grid__col k-Grid__col--12 k-Grid__col--10-l k-Grid__col--offset-1-l"
    >
      <div
        className="k-Carousel__inner"
        onKeyDown={[Function]}
        onScroll={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
        >
          <div
            className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
          >
            <div
              className="k-Carousel__page__item"
            >
              <div
                className="sc-hKwDye gitSxG k-ProjectCard k-ProjectCard--normal"
                title="A"
              >
                <div
                  className="k-ProjectCard__image"
                >
                  <img
                    alt=""
                    className="k-ProjectCard__image__image"
                    src=""
                  />
                </div>
                <div
                  className="k-ProjectCard__content"
                />
              </div>
            </div>
            <div
              className="k-Carousel__page__item"
            />
            <div
              className="k-Carousel__page__item"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="k-Grid__col k-Grid__col--12 k-Grid__col--1-l"
    />
  </div>
</div>
`;

exports[`<Carousel /> legacy carousel on desktop with withoutLeftOffset={true} matches with snapshot 1`] = `
<div
  className="sc-dkPtRN eghNle k-Carousel k-LegacyCarousel"
>
  <div
    className="sc-gsDKAQ hebEnC k-Grid"
  >
    <div
      className="k-Grid__col k-Grid__col--12 k-Grid__col--11-l k-Grid__col--offset-0-l"
    >
      <div
        className="k-Carousel__inner"
        onKeyDown={[Function]}
        onScroll={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
        >
          <div
            className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
          >
            <div
              className="k-Carousel__page__item"
            >
              <div
                className="sc-hKwDye gitSxG k-ProjectCard k-ProjectCard--normal"
                title="A"
              >
                <div
                  className="k-ProjectCard__image"
                >
                  <img
                    alt=""
                    className="k-ProjectCard__image__image"
                    src=""
                  />
                </div>
                <div
                  className="k-ProjectCard__content"
                />
              </div>
            </div>
            <div
              className="k-Carousel__page__item"
            />
            <div
              className="k-Carousel__page__item"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="k-Grid__col k-Grid__col--12 k-Grid__col--1-l"
    />
  </div>
</div>
`;

exports[`<Carousel /> legacy carousel on mobile matches with snapshot 1`] = `
<div
  className="sc-dkPtRN eghNle k-Carousel k-LegacyCarousel"
>
  <div
    className="sc-gsDKAQ hebEnC k-Grid"
  >
    <div
      className="k-Grid__col k-Grid__col--12 k-Grid__col--10-l k-Grid__col--offset-1-l"
    >
      <div
        className="k-Carousel__inner"
        onKeyDown={[Function]}
        onScroll={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
        >
          <div
            className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
          >
            <div
              className="k-Carousel__page__item"
            >
              <div
                className="sc-hKwDye gitSxG k-ProjectCard k-ProjectCard--normal"
                title="A"
              >
                <div
                  className="k-ProjectCard__image"
                >
                  <img
                    alt=""
                    className="k-ProjectCard__image__image"
                    src=""
                  />
                </div>
                <div
                  className="k-ProjectCard__content"
                />
              </div>
            </div>
            <div
              className="k-Carousel__page__item"
            />
            <div
              className="k-Carousel__page__item"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="k-Grid__col k-Grid__col--12 k-Grid__col--1-l"
    />
  </div>
</div>
`;

exports[`<Carousel /> with exportVisibilityProps prop matches with snapshot 1`] = `
<div
  className="sc-dkPtRN dKFCpL k-Carousel"
>
  <div
    className="k-Carousel__inner"
    onKeyDown={[Function]}
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
    >
      <div
        className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
      >
        <div
          className="k-Carousel__page__item"
        >
          <div
            className="sc-hKwDye gitSxG k-ProjectCard k-ProjectCard--normal"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCImPb bVpLzu k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                The Office, la série culte décortiquée par S!CK
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jRQBWg eMzrbS k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #19b4fa)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-bold k-u-hidden@xs-down k-ProjectCard__progress__text"
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-Carousel__page__item"
        >
          <div
            className="sc-hKwDye gitSxG k-ProjectCard k-ProjectCard--success"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten-1.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCImPb bVpLzu k-Title k-ProjectCard__title k-u-clamp-2 custom className k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                Pellentesque ornare sem lacinia quam venenatis vestibulum.
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jRQBWg eMzrbS k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #19b4fa)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-bold k-u-hidden@xs-down k-ProjectCard__progress__text"
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> with itemsPerPage prop matches with snapshot 1`] = `
<div
  className="sc-dkPtRN cQFFON k-Carousel"
>
  <div
    className="k-Carousel__inner"
    onKeyDown={[Function]}
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
    >
      <div
        className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
      >
        <div
          className="k-Carousel__page__item"
        >
          <div
            className="sc-hKwDye gitSxG k-ProjectCard k-ProjectCard--normal"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCImPb bVpLzu k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                The Office, la série culte décortiquée par S!CK
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jRQBWg eMzrbS k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #19b4fa)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-bold k-u-hidden@xs-down k-ProjectCard__progress__text"
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-Carousel__page__item"
        >
          <div
            className="sc-hKwDye gitSxG k-ProjectCard k-ProjectCard--success"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten-1.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCImPb bVpLzu k-Title k-ProjectCard__title k-u-clamp-2 custom className k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                Pellentesque ornare sem lacinia quam venenatis vestibulum.
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jRQBWg eMzrbS k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #19b4fa)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-bold k-u-hidden@xs-down k-ProjectCard__progress__text"
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-Carousel__page__item"
        />
        <div
          className="k-Carousel__page__item"
        />
        <div
          className="k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> with loop prop on desktop matches with snapshot 1`] = `
<div
  className="sc-dkPtRN dKFCpL k-Carousel"
>
  <div
    className="k-Carousel__inner"
    onKeyDown={[Function]}
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage k-Carousel__inner__pageContainer--hasBeenViewed"
    >
      <div
        className="k-Carousel__page k-Carousel__page--isActivePage k-Carousel__page--hasBeenViewed"
      >
        <div
          className="k-Carousel__page__item"
        >
          <div
            className="sc-hKwDye gitSxG k-ProjectCard k-ProjectCard--normal"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCImPb bVpLzu k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                The Office, la série culte décortiquée par S!CK
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jRQBWg eMzrbS k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #19b4fa)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-bold k-u-hidden@xs-down k-ProjectCard__progress__text"
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-Carousel__page__item"
        >
          <div
            className="sc-hKwDye gitSxG k-ProjectCard k-ProjectCard--success"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten-1.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCImPb bVpLzu k-Title k-ProjectCard__title k-u-clamp-2 custom className k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                Pellentesque ornare sem lacinia quam venenatis vestibulum.
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jRQBWg eMzrbS k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #19b4fa)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-bold k-u-hidden@xs-down k-ProjectCard__progress__text"
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;
